; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/qla2xxx/extr_qla_sup.c_qla2xxx_get_flash_info.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/scsi/qla2xxx/extr_qla_sup.c_qla2xxx_get_flash_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { %struct.qla_hw_data* }
%struct.qla_hw_data = type { i32 }

@QLA_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @qla2xxx_get_flash_info(%struct.TYPE_7__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.qla_hw_data*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %7, i32 0, i32 0
  %9 = load %struct.qla_hw_data*, %struct.qla_hw_data** %8, align 8
  store %struct.qla_hw_data* %9, %struct.qla_hw_data** %6, align 8
  %10 = load %struct.qla_hw_data*, %struct.qla_hw_data** %6, align 8
  %11 = call i32 @IS_QLA24XX_TYPE(%struct.qla_hw_data* %10)
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %27, label %13

13:                                               ; preds = %1
  %14 = load %struct.qla_hw_data*, %struct.qla_hw_data** %6, align 8
  %15 = call i32 @IS_QLA25XX(%struct.qla_hw_data* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %27, label %17

17:                                               ; preds = %13
  %18 = load %struct.qla_hw_data*, %struct.qla_hw_data** %6, align 8
  %19 = call i32 @IS_CNA_CAPABLE(%struct.qla_hw_data* %18)
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %27, label %21

21:                                               ; preds = %17
  %22 = load %struct.qla_hw_data*, %struct.qla_hw_data** %6, align 8
  %23 = call i32 @IS_QLA2031(%struct.qla_hw_data* %22)
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %27, label %25

25:                                               ; preds = %21
  %26 = load i32, i32* @QLA_SUCCESS, align 4
  store i32 %26, i32* %2, align 4
  br label %44

27:                                               ; preds = %21, %17, %13, %1
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %29 = call i32 @qla2xxx_find_flt_start(%struct.TYPE_7__* %28, i32* %5)
  store i32 %29, i32* %4, align 4
  %30 = load i32, i32* %4, align 4
  %31 = load i32, i32* @QLA_SUCCESS, align 4
  %32 = icmp ne i32 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %27
  %34 = load i32, i32* %4, align 4
  store i32 %34, i32* %2, align 4
  br label %44

35:                                               ; preds = %27
  %36 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @qla2xxx_get_flt_info(%struct.TYPE_7__* %36, i32 %37)
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %40 = call i32 @qla2xxx_get_fdt_info(%struct.TYPE_7__* %39)
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %42 = call i32 @qla2xxx_get_idc_param(%struct.TYPE_7__* %41)
  %43 = load i32, i32* @QLA_SUCCESS, align 4
  store i32 %43, i32* %2, align 4
  br label %44

44:                                               ; preds = %35, %33, %25
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local i32 @IS_QLA24XX_TYPE(%struct.qla_hw_data*) #1

declare dso_local i32 @IS_QLA25XX(%struct.qla_hw_data*) #1

declare dso_local i32 @IS_CNA_CAPABLE(%struct.qla_hw_data*) #1

declare dso_local i32 @IS_QLA2031(%struct.qla_hw_data*) #1

declare dso_local i32 @qla2xxx_find_flt_start(%struct.TYPE_7__*, i32*) #1

declare dso_local i32 @qla2xxx_get_flt_info(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @qla2xxx_get_fdt_info(%struct.TYPE_7__*) #1

declare dso_local i32 @qla2xxx_get_idc_param(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
